--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <script src="https://kit.fontawesome.com/74e7c74d87.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;@700&family=Open+Sans&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
+    <script src="https://kit.fontawesome.com/74e7c74d87.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -48,22 +48,24 @@
                         velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et
                         accumsan.
                     </p>
-                    <div class="2-column-list">
-                        <div class="list-of-items">
-                            <i class="fa-solid fa-square-check"></i> Stunning on all screens
-                            <i class="fa-solid fa-square-check"></i> Easy to customize
-                            <i class="fa-solid fa-square-check"></i> Make a difference
-                            <i class="fa-solid fa-square-check"></i> Imagine and create
-                            <i class="fa-solid fa-square-check"></i> Unlimited possibilities
-                            <i class="fa-solid fa-square-check"></i> Remarkable style
-                            <i class="fa-solid fa-square-check"></i> Captivating presentations
-                            <i class="fa-solid fa-square-check"></i> Make your portfolio pop
-                            <i class="fa-solid fa-square-check"></i> Worlds that matter
-                            <i class="fa-solid fa-square-check"></i> Satisfied clients
+                    <div class="layout-2-column">
+                        <div class="column">
+                            <p><i class="fas fa-solid fa-square-check"></i> Stunning on all screens</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Easy to customize</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Make a difference</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Imagine and create</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Unlimited possibilities</p>
+                        </div>
+                        <div class="column">
+                            <p><i class="fas fa-solid fa-square-check"></i> Remarkable style</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Captivating presentations</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Make your portfolio pop</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Worlds that matter</p>
+                            <p><i class="fas fa-solid fa-square-check"></i> Satisfied clients</p>
                         </div>
                     </div>
                 </div>
-                <img class="what-we-do-image" src="./images/Layer 5.png" alt="what-we-do-image">
+                <img class="what-we-do-image" src="./images/Layer_5.png" alt="what-we-do-image">
             </div>
         </div>
     </section>
@@ -116,43 +118,56 @@
 
             <div class="layout-3-column">
                 <div class="price-tag">
-                    <h2>BASIC </h2>
-                    <h5 class="monthly-payment">$35.99 Monthly</h5>
-                    <div class="list-of-items">
-                        <input type="checkbox" name="" id="" checked disabled>Lorem ipsum dolor sit amet
-                        <input type="checkbox" name="" id="" checked disabled>Consectetur adipisicing elit
-                        <input type="checkbox" name="" id="" checked disabled>Sed diam nonummy
-                        <input type="checkbox" name="" id="" checked disabled>Nibh euismod tincidunt
-                        <input type="checkbox" name="" id="" checked disabled>Ut laoreet dolore
-                        <input type="checkbox" name="" id="" checked disabled>Magna aliquam erat volutpat
+                    <div class="rec"></div>
+                    <div class="triangle"></div>
+                    <div class="container">
+                        <h2>BASIC </h2>
+                        <h5 class="monthly-payment">$35.99 Monthly</h5>
+                        <div class="list-of-items">
+                            <p><i class="fas fa-solid fa-square-check"></i>Lorem ipsum dolor sit amet</p>
+                            <p><i class="fas fa-solid fa-square-check"></i>Consectetur adipisicing elit</p>
+                            <p><i class="fas fa-solid fa-square-check"></i>Sed diam nonummy</p>
+                            <p><i class="fas fa-solid fa-square-check"></i>Nibh euismod tincidunt</p>
+                            <p><i class="fas fa-solid fa-square-check"></i>Ut laoreet dolore</p>
+                            <p><i class="fas fa-solid fa-square-check"></i>Magna aliquam erat volutpat</p>
+                        </div>
+                        <button class="button button_colored">get started</button>
                     </div>
-                    <button class="button button_colored">get started</button>
+
                 </div>
                 <div class="price-tag">
+                    <div class="rec"></div>
+                    <div class="triangle"></div>
+                    <div class="container">
                     <h2>ADVANCED </h2>
                     <h5 class="monthly-payment">$55.99 Monthly</h5>
                     <div class="list-of-items">
-                        <input type="checkbox" name="" id="" checked disabled>Lorem ipsum dolor sit amet
-                        <input type="checkbox" name="" id="" checked disabled>Consectetur adipisicing elit
-                        <input type="checkbox" name="" id="" checked disabled>Sed diam nonummy
-                        <input type="checkbox" name="" id="" checked disabled>Nibh euismod tincidunt
-                        <input type="checkbox" name="" id="" checked disabled>Ut laoreet dolore
-                        <input type="checkbox" name="" id="" checked disabled>Magna aliquam erat volutpat
+                        <p><i class="fas fa-solid fa-square-check"></i>Lorem ipsum dolor sit amet</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Consectetur adipisicing elit</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Sed diam nonummy</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Nibh euismod tincidunt</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Ut laoreet dolore</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Magna aliquam erat volutpat</p>
                     </div>
                     <button class="button button_colored">get started</button>
                 </div>
+                </div>
                 <div class="price-tag">
+                    <div class="rec"></div>
+                    <div class="triangle"></div>
+                    <div class="container">
                     <h2>SMART </h2>
                     <h5 class="monthly-payment">$75.99 Monthly</h5>
                     <div class="list-of-items">
-                        <input type="checkbox" name="" id="" checked disabled>Lorem ipsum dolor sit amet
-                        <input type="checkbox" name="" id="" checked disabled>Consectetur adipisicing elit
-                        <input type="checkbox" name="" id="" checked disabled>Sed diam nonummy
-                        <input type="checkbox" name="" id="" checked disabled>Nibh euismod tincidunt
-                        <input type="checkbox" name="" id="" checked disabled>Ut laoreet dolore
-                        <input type="checkbox" name="" id="" checked disabled>Magna aliquam erat volutpat
+                        <p><i class="fas fa-solid fa-square-check"></i>Lorem ipsum dolor sit amet</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Consectetur adipisicing elit</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Sed diam nonummy</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Nibh euismod tincidunt</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Ut laoreet dolore</p>
+                        <p><i class="fas fa-solid fa-square-check"></i>Magna aliquam erat volutpat</p>
                     </div>
                     <button class="button button_colored">get started</button>
+                    </div>
                 </div>
             </div>
         </div>
