Fixed validator errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -184,7 +184,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                     <div class="stay-informed__form">
-                        <input type="email" name="" id="" placeholder="YOUR EMAIL">
+                        <input type="email" name="email" id="email" placeholder="YOUR EMAIL">
                         <button class="button button_colored">send</button>
                     </div>
                 </div>
@@ -195,11 +195,11 @@
         <div class="wrapper">
             <nav class="navigation">
                 <ul class="navigation__items">
-                    <li>home</li> <span class="dash">-</span>
-                    <li>about us</li><span class="dash">-</span>
-                    <li>services</li><span class="dash">-</span>
-                    <li>portfolio</li><span class="dash">-</span>
-                    <li>blog</li><span class="dash">-</span>
+                    <li>home <span class="dash">-</span></li> 
+                    <li>about us <span class="dash">-</span></li>
+                    <li>services <span class="dash">-</span></li>
+                    <li>portfolio <span class="dash">-</span></li>
+                    <li>blog <span class="dash">-</span></li>
                     <li>contact us</li>
                 </ul>
                 <p>Created by akhouad 2016. All Rights Reserved</p>
