--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.png">
     <script defer src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
 </head>
 
 <body>
-
     <header class="header">
         <div class="wrapper header__wrapper">
             <a href="#">AKAD.</a>
             <nav class="navigation">
-                <ul id="header__navigation__items">
+                <ul id="header__navigation">
                     <li>home</li>
                     <li>about us</li>
                     <li>services</li>
@@ -204,7 +204,7 @@
     <footer class="footer">
         <div class="wrapper">
             <nav class="navigation">
-                <ul class="navigation__items">
+                <ul class="footer__navigation">
                     <li>home <span class="dash">-</span></li>
                     <li>about us <span class="dash">-</span></li>
                     <li>services <span class="dash">-</span></li>
