--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                     <h3>STAY INFORMED WITH OUR <br>NEWSLETTER </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
-                    <div class="stay-informed__form">
+                    <form class="stay-informed__form" action="" method="post">
                         <input type="email" name="email" id="email" placeholder="YOUR EMAIL">
                         <button class="button button_colored">send</button>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
