--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./src/sass/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./src/images/favicon/favicon.png">
     <script defer src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
 </head>
 
@@ -29,7 +29,7 @@
                     <li>contact us</li>
                 </ul>
             </nav>
-            <div id="hamburger-menu"><img src="./images/icons/menu.png" alt="menu"></div>
+            <div id="hamburger-menu"><img src="./src/images/icons/menu.png" alt="menu"></div>
         </div>
         <section class="promo">
             <div class="wrapper">
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <img class="what-we-do-image" src="./images/pictures/Layer_5.png" alt="what-we-do-image">
+                <img class="what-we-do-image" src="./src/images/pictures/Layer_5.png" alt="what-we-do-image">
             </div>
         </div>
     </section>
@@ -84,7 +84,7 @@
             <div class="layout-4-column">
                 <div class="tool">
                     <div class="tool__icon">
-                        <img src="./images/icons/pulse.png" alt="pulse">
+                        <img src="./src/images/icons/pulse.png" alt="pulse">
                         <div class="icon"></div>
                     </div>
                     <h4>KEEP PULSE GOING</h4>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="tool">
                     <div class="tool__icon">
-                        <img src="./images/icons/infinity.png" alt="infinity">
+                        <img src="./src/images/icons/infinity.png" alt="infinity">
                         <div class="icon"></div>
                     </div>
                     <h4>PASS THE LIMITS</h4>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="tool">
                     <div class="tool__icon">
-                        <img src="./images/icons/bulb.png" alt="bulb">
+                        <img src="./src/images/icons/bulb.png" alt="bulb">
                         <div class="icon"></div>
                     </div>
                     <h4>GREAT IDEAS</h4>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="tool">
                     <div class="tool__icon">
-                        <img src="./images/icons/controllers.png" alt="controllers">
+                        <img src="./src/images/icons/controllers.png" alt="controllers">
                         <div class="icon"></div>
                     </div>
                     <h4>AWESOME SUPPORT</h4>
@@ -236,7 +236,7 @@
             </div>
         </div>
     </footer>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 
 </html>
